--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+## CRON
 # By default, the syntax used for cron expressions is based on Quartz - https://www.quartz-scheduler.org/documentation/quartz-2.3.0/tutorials/crontrigger.html
 # You can change the syntax using the following property:
 # quarkus.scheduler.cron-type=unix
 cron.expr.counter=*/5 * * * * ?
+
+## EXCEPTIONS
+com.signomix.jobs.exception.user.not.found=user not found
+com.signomix.jobs.exception.organization.not.found=organization not found
