--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,44 @@
 # By default, the syntax used for cron expressions is based on Quartz - https://www.quartz-scheduler.org/documentation/quartz-2.3.0/tutorials/crontrigger.html
 # You can change the syntax using the following property:
 # quarkus.scheduler.cron-type=unix
-cron.expr.counter=*/5 * * * * ?
+cron.expr.backup=*/10 * * * * ?
+cron.expr.datacleaner=*/5 * * * * ?
+cron.expr.checkdevices=*/1 * * * * ?
 
 ## EXCEPTIONS
 com.signomix.jobs.exception.user.not.found=user not found
 com.signomix.jobs.exception.organization.not.found=organization not found
+
+## MESSAGING
+mp.messaging.outgoing.events.connector=smallrye-rabbitmq
+%prod.mp.messaging.outgoing.events.exchange.name=${MQ_EVENTS_EXCHANGE:events}
+%prod.mp.messaging.outgoing.events.exchange.declare=false
+%prod.mp.messaging.outgoing.events.exchange.type=fanout
+%prod.mp.messaging.outgoing.events.exchange.durable=false
+%prod.mp.messaging.outgoing.events.host=${MQ_HOST}
+%prod.mp.messaging.outgoing.events.port=${MQ_PORT}
+%prod.mp.messaging.outgoing.events.username=${MQ_USER}
+%prod.mp.messaging.outgoing.events.password=${MQ_PASSWORD}
+%prod.mp.messaging.outgoing.events.virtual-host=
+%prod.mp.messaging.outgoing.events.ssl=false
+
+mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
+#mp.messaging.outgoing.notifications.exchange.declare=false
+%prod.mp.messaging.outgoing.notifications.default-routing-key=#
+%prod.mp.messaging.outgoing.notifications.host=${MQ_HOST}
+%prod.mp.messaging.outgoing.notifications.port=${MQ_PORT}
+%prod.mp.messaging.outgoing.notifications.username=${MQ_USER}
+%prod.mp.messaging.outgoing.notifications.password=${MQ_PASSWORD}
+%prod.mp.messaging.outgoing.notifications.virtual-host=
+%prod.mp.messaging.outgoing.notifications.ssl=false
+mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
+%prod.mp.messaging.outgoing.admin_email.exchange.name=${MQ_ADMIN_EMAIL_EXCHANGE:admin_email}
+%prod.mp.messaging.outgoing.admin_email.exchange.declare=false
+%prod.mp.messaging.outgoing.admin_email.exchange.type=fanout
+%prod.mp.messaging.outgoing.admin_email.exchange.durable=false
+%prod.mp.messaging.outgoing.admin_email.host=${MQ_HOST}
+%prod.mp.messaging.outgoing.admin_email.port=${MQ_PORT}
+%prod.mp.messaging.outgoing.admin_email.username=${MQ_USER}
+%prod.mp.messaging.outgoing.admin_email.password=${MQ_PASSWORD}
+%prod.mp.messaging.outgoing.admin_email.virtual-host=
+%prod.mp.messaging.outgoing.admin_email.ssl=false
