--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+## CONTAINER
+signomix.image.group.default=${USER:''}
+quarkus.container-image.group=${SIGNOMIX_IMAGE_GROUP:${signomix.image.group.default}}
+quarkus.container-image.name=signomix-ta-jobs
+quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
+# Replace with production tag before pushing image to the repository
+# quarkus.container-image.tag=latest
+
+
 ## CRON
 # By default, the syntax used for cron expressions is based on Quartz - https://www.quartz-scheduler.org/documentation/quartz-2.3.0/tutorials/crontrigger.html
 # You can change the syntax using the following property:
@@ -10,7 +19,19 @@ cron.expr.checkdevices=*/1 * * * * ?
 com.signomix.jobs.exception.user.not.found=user not found
 com.signomix.jobs.exception.organization.not.found=organization not found
 
+## Queue config
+signomix.queue.username=user
+signomix.queue.password=user
+signomix.queue.host=signomix-mq
 ## MESSAGING
+rabbitmq-host=${MQ_HOST:${signomix.queue.host}}
+rabbitmq-port=${MQ_PORT:5672}
+rabbitmq-username=${MQ_USER:${signomix.queue.username}}
+rabbitmq-password=${MQ_PASSWORD:${signomix.queue.password}}
+
+## MESSAGING
+
+### EVENTS
 mp.messaging.outgoing.events.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.events.exchange.name=${MQ_EVENTS_EXCHANGE:events}
 %prod.mp.messaging.outgoing.events.exchange.declare=false
@@ -23,6 +44,33 @@ mp.messaging.outgoing.events.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.events.virtual-host=
 %prod.mp.messaging.outgoing.events.ssl=false
 
+### EVENTS_DB
+mp.messaging.outgoing.events_db.connector=smallrye-rabbitmq
+%prod.mp.messaging.outgoing.events_db.exchange.name=events_db
+%prod.mp.messaging.outgoing.events_db.exchange.declare=false
+%prod.mp.messaging.outgoing.events_db.exchange.type=fanout
+%prod.mp.messaging.outgoing.events_db.exchange.durable=false
+%prod.mp.messaging.outgoing.events_db.host=${MQ_HOST}
+%prod.mp.messaging.outgoing.events_db.port=${MQ_PORT}
+%prod.mp.messaging.outgoing.events_db.username=${MQ_USER}
+%prod.mp.messaging.outgoing.events_db.password=${MQ_PASSWORD}
+%prod.mp.messaging.outgoing.events_db.virtual-host=
+%prod.mp.messaging.outgoing.events_db.ssl=false
+
+### EVENTS_DEVICE
+mp.messaging.outgoing.events_device.connector=smallrye-rabbitmq
+%prod.mp.messaging.outgoing.events_device.exchange.name=events_device
+%prod.mp.messaging.outgoing.events_device.exchange.declare=false
+%prod.mp.messaging.outgoing.events_device.exchange.type=fanout
+%prod.mp.messaging.outgoing.events_device.exchange.durable=false
+%prod.mp.messaging.outgoing.events_device.host=${MQ_HOST}
+%prod.mp.messaging.outgoing.events_device.port=${MQ_PORT}
+%prod.mp.messaging.outgoing.events_device.username=${MQ_USER}
+%prod.mp.messaging.outgoing.events_device.password=${MQ_PASSWORD}
+%prod.mp.messaging.outgoing.events_device.virtual-host=
+%prod.mp.messaging.outgoing.events_device.ssl=false
+
+### NOTIFICATIONS
 mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
 #mp.messaging.outgoing.notifications.exchange.declare=false
 %prod.mp.messaging.outgoing.notifications.default-routing-key=#
@@ -32,6 +80,10 @@ mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.notifications.password=${MQ_PASSWORD}
 %prod.mp.messaging.outgoing.notifications.virtual-host=
 %prod.mp.messaging.outgoing.notifications.ssl=false
+
+
+
+### ADMIN_EMAIL
 mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.admin_email.exchange.name=${MQ_ADMIN_EMAIL_EXCHANGE:admin_email}
 %prod.mp.messaging.outgoing.admin_email.exchange.declare=false
