--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## CONTAINER
 signomix.image.group.default=${USER:''}
+quarkus.container-image.builder=jib
 quarkus.container-image.group=${SIGNOMIX_IMAGE_GROUP:${signomix.image.group.default}}
 quarkus.container-image.name=signomix-ta-jobs
 quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
@@ -11,9 +12,13 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 # By default, the syntax used for cron expressions is based on Quartz - https://www.quartz-scheduler.org/documentation/quartz-2.3.0/tutorials/crontrigger.html
 # You can change the syntax using the following property:
 # quarkus.scheduler.cron-type=unix
-cron.expr.backup=*/10 * * * * ?
-cron.expr.datacleaner=*/5 * * * * ?
-cron.expr.checkdevices=*/1 * * * * ?
+%dev.cron.expr.backup=*/10 * * * * ?
+%dev.cron.expr.datacleaner=*/5 * * * * ?
+%dev.cron.expr.checkdevices=*/1 * * * * ?
+%prod.cron.expr.backup=0 0 3 * * ?
+%prod.cron.expr.datacleaner=0 0 5 * * ?
+%prod.cron.expr.checkdevices=0 0/15 * * * ?
+
 
 ## EXCEPTIONS
 com.signomix.jobs.exception.user.not.found=user not found
