--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 %dev.cron.expr.backup=*/10 * * * * ?
 %dev.cron.expr.datacleaner=*/5 * * * * ?
 %dev.cron.expr.checkdevices=*/1 * * * * ?
+#%prod.cron.expr.backup=0 0 3 * * ?
 %prod.cron.expr.backup=0 0 3 * * ?
 %prod.cron.expr.datacleaner=0 0 5 * * ?
 %prod.cron.expr.checkdevices=0 0/15 * * * ?
