--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,12 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 %dev.cron.expr.backup=*/10 * * * * ?
 %dev.cron.expr.datacleaner=*/5 * * * * ?
 %dev.cron.expr.checkdevices=*/1 * * * * ?
-#%prod.cron.expr.backup=0 0 3 * * ?
+%dev.cron.expr.systemmonitor=0 0/1 * * * ?
+
 %prod.cron.expr.backup=0 0 3 * * ?
 %prod.cron.expr.datacleaner=0 0 5 * * ?
 %prod.cron.expr.checkdevices=0 0/15 * * * ?
+%prod.cron.expr.systemmonitor=0 0/5 * * * ?
 
 
 ## EXCEPTIONS
@@ -101,3 +103,6 @@ mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.admin_email.password=${MQ_PASSWORD}
 %prod.mp.messaging.outgoing.admin_email.virtual-host=
 %prod.mp.messaging.outgoing.admin_email.ssl=false
+
+## MONITORING
+signomix.monitoring.disk.free=${SIGNOMIX_DISK_FREE_MB}
