--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 ## CONTAINER
 signomix.image.group.default=
 quarkus.container-image.builder=jib
-#quarkus.container-image.registry=${SIGNOMIX_IMAGE_REGISTRY:docker.io}
-#quarkus.container-image.group=${SIGNOMIX_IMAGE_GROUP:${signomix.image.group.default}}
-#quarkus.container-image.name=signomix-ta-jobs
-#quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
+quarkus.container-image.group=${SIGNOMIX_IMAGE_GROUP:${signomix.image.group.default}}
+quarkus.container-image.name=${SIGNOMIX_IMAGE_NAME:signomix-ta-jobs}
+quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 # Replace with production tag before pushing image to the repository
 # quarkus.container-image.tag=latest
 
