--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,3 +106,20 @@ mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
 
 ## MONITORING
 signomix.monitoring.disk.free=${SIGNOMIX_DISK_FREE_MB}
+
+## LOGGING
+quarkus.log.level=${SIGNOMIX_LOG_LEVEL:INFO}
+quarkus.log.handler.gelf.enabled=${GELF_ENABLED:false}
+quarkus.log.handler.gelf.host=${GELF_HOST}
+quarkus.log.handler.gelf.port=${GELF_PORT}
+quarkus.log.handler.gelf.additional-field.X-OVH-TOKEN.value=${GELF_TOKEN}
+quarkus.log.handler.gelf.additional-field.X-OVH-TOKEN.type=String
+
+## HTTP
+quarkus.http.port=${PORT:8080}
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.access-log.enabled=true
+
