--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,25 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 
 ## CRON
 # By default, the syntax used for cron expressions is based on Quartz - https://www.quartz-scheduler.org/documentation/quartz-2.3.0/tutorials/crontrigger.html
+# Cron generator: https://www.javainuse.com/cron
 # You can change the syntax using the following property:
 # quarkus.scheduler.cron-type=unix
 %dev.cron.expr.backup=*/10 * * * * ?
+%dev.cron.expr.archive=*/10 * * * * ?
 %dev.cron.expr.datacleaner=*/5 * * * * ?
 %dev.cron.expr.checkdevices=*/1 * * * * ?
 %dev.cron.expr.systemmonitor=0 0/1 * * * ?
 
+# archive every day at 1:00
+%prod.cron.expr.archive=0 0 1 * * ?
+#%prod.cron.expr.archive=0 * * * * ?
+# backup every day at 3:00
 %prod.cron.expr.backup=0 0 3 * * ?
+# datacleaner every day at 5:00
 %prod.cron.expr.datacleaner=0 0 5 * * ?
+# checkdevices every 15 minutes
 %prod.cron.expr.checkdevices=0 0/15 * * * ?
+# systemmonitor every 5 minutes
 %prod.cron.expr.systemmonitor=0 0/5 * * * ?
 
 
@@ -89,7 +98,13 @@ mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.notifications.virtual-host=
 %prod.mp.messaging.outgoing.notifications.ssl=false
 
-
+## MQTT
+#
+mp.messaging.outgoing.commands.connector=smallrye-mqtt
+mp.messaging.outgoing.commands.host=signomix-broker
+mp.messaging.outgoing.commands.port=1883
+mp.messaging.outgoing.commands.topic=signomix/events/commands
+mp.messaging.outgoing.commands.server-name=signomix-broker
 
 ### ADMIN_EMAIL
 mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
