--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 %dev.cron.expr.datacleaner=*/5 * * * * ?
 %dev.cron.expr.checkdevices=*/1 * * * * ?
 %dev.cron.expr.systemmonitor=0 0/1 * * * ?
+%dev.cron.expr.devicecommands=0 0/1 * * * ?
 
 # archive every day at 1:00
 %prod.cron.expr.archive=0 0 1 * * ?
@@ -30,7 +31,10 @@ quarkus.container-image.tag=${SIGNOMIX_IMAGE_TAG:%release%}
 %prod.cron.expr.checkdevices=0 0/15 * * * ?
 # systemmonitor every 5 minutes
 %prod.cron.expr.systemmonitor=0 0/5 * * * ?
-
+# device command every 1 minute
+#%prod.cron.expr.devicecommands=0 0/1 * * * ?
+# device command every 15 seconds
+%prod.cron.expr.devicecommands=0/15 * * * * ?
 
 ## EXCEPTIONS
 com.signomix.jobs.exception.user.not.found=user not found
@@ -106,6 +110,12 @@ mp.messaging.outgoing.commands.port=1883
 mp.messaging.outgoing.commands.topic=signomix/events/commands
 mp.messaging.outgoing.commands.server-name=signomix-broker
 
+mp.messaging.outgoing.devicecommands.connector=smallrye-mqtt
+mp.messaging.outgoing.devicecommands.host=signomix-broker
+mp.messaging.outgoing.devicecommands.port=1883
+mp.messaging.outgoing.devicecommands.topic=signomix/events/device-commands
+mp.messaging.outgoing.devicecommands.server-name=signomix-broker
+
 ### ADMIN_EMAIL
 mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.admin_email.exchange.name=${MQ_ADMIN_EMAIL_EXCHANGE:admin_email}
@@ -120,7 +130,7 @@ mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
 %prod.mp.messaging.outgoing.admin_email.ssl=false
 
 ## MONITORING
-signomix.monitoring.disk.free=${SIGNOMIX_DISK_FREE_MB}
+signomix.monitoring.disk.free=${SIGNOMIX_DISK_FREE_MB:1000}
 
 ## LOGGING
 quarkus.log.level=${SIGNOMIX_LOG_LEVEL:INFO}
