wip: removing RabbitMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,63 +44,76 @@ com.signomix.jobs.exception.organization.not.found=organization not found
 signomix.queue.username=user
 signomix.queue.password=user
 signomix.queue.host=signomix-mq
-## MESSAGING
-rabbitmq-host=${MQ_HOST:${signomix.queue.host}}
-rabbitmq-port=${MQ_PORT:5672}
-rabbitmq-username=${MQ_USER:${signomix.queue.username}}
-rabbitmq-password=${MQ_PASSWORD:${signomix.queue.password}}
+# ## MESSAGING
+# rabbitmq-host=${MQ_HOST:${signomix.queue.host}}
+# rabbitmq-port=${MQ_PORT:5672}
+# rabbitmq-username=${MQ_USER:${signomix.queue.username}}
+# rabbitmq-password=${MQ_PASSWORD:${signomix.queue.password}}
 
 ## MESSAGING
 
 ### EVENTS
-mp.messaging.outgoing.events.connector=smallrye-rabbitmq
-%prod.mp.messaging.outgoing.events.exchange.name=${MQ_EVENTS_EXCHANGE:events}
-%prod.mp.messaging.outgoing.events.exchange.declare=false
-%prod.mp.messaging.outgoing.events.exchange.type=fanout
-%prod.mp.messaging.outgoing.events.exchange.durable=false
-%prod.mp.messaging.outgoing.events.host=${MQ_HOST}
-%prod.mp.messaging.outgoing.events.port=${MQ_PORT}
-%prod.mp.messaging.outgoing.events.username=${MQ_USER}
-%prod.mp.messaging.outgoing.events.password=${MQ_PASSWORD}
-%prod.mp.messaging.outgoing.events.virtual-host=
-%prod.mp.messaging.outgoing.events.ssl=false
+# mp.messaging.outgoing.events.connector=smallrye-rabbitmq
+# %prod.mp.messaging.outgoing.events.exchange.name=${MQ_EVENTS_EXCHANGE:events}
+# %prod.mp.messaging.outgoing.events.exchange.declare=false
+# %prod.mp.messaging.outgoing.events.exchange.type=fanout
+# %prod.mp.messaging.outgoing.events.exchange.durable=false
+# %prod.mp.messaging.outgoing.events.host=${MQ_HOST}
+# %prod.mp.messaging.outgoing.events.port=${MQ_PORT}
+# %prod.mp.messaging.outgoing.events.username=${MQ_USER}
+# %prod.mp.messaging.outgoing.events.password=${MQ_PASSWORD}
+# %prod.mp.messaging.outgoing.events.virtual-host=
+# %prod.mp.messaging.outgoing.events.ssl=false
 
 ### EVENTS_DB
-mp.messaging.outgoing.events_db.connector=smallrye-rabbitmq
-%prod.mp.messaging.outgoing.events_db.exchange.name=events_db
-%prod.mp.messaging.outgoing.events_db.exchange.declare=false
-%prod.mp.messaging.outgoing.events_db.exchange.type=fanout
-%prod.mp.messaging.outgoing.events_db.exchange.durable=false
-%prod.mp.messaging.outgoing.events_db.host=${MQ_HOST}
-%prod.mp.messaging.outgoing.events_db.port=${MQ_PORT}
-%prod.mp.messaging.outgoing.events_db.username=${MQ_USER}
-%prod.mp.messaging.outgoing.events_db.password=${MQ_PASSWORD}
-%prod.mp.messaging.outgoing.events_db.virtual-host=
-%prod.mp.messaging.outgoing.events_db.ssl=false
+# mp.messaging.outgoing.events_db.connector=smallrye-rabbitmq
+# %prod.mp.messaging.outgoing.events_db.exchange.name=events_db
+# %prod.mp.messaging.outgoing.events_db.exchange.declare=false
+# %prod.mp.messaging.outgoing.events_db.exchange.type=fanout
+# %prod.mp.messaging.outgoing.events_db.exchange.durable=false
+# %prod.mp.messaging.outgoing.events_db.host=${MQ_HOST}
+# %prod.mp.messaging.outgoing.events_db.port=${MQ_PORT}
+# %prod.mp.messaging.outgoing.events_db.username=${MQ_USER}
+# %prod.mp.messaging.outgoing.events_db.password=${MQ_PASSWORD}
+# %prod.mp.messaging.outgoing.events_db.virtual-host=
+# %prod.mp.messaging.outgoing.events_db.ssl=false
 
 ### EVENTS_DEVICE
-mp.messaging.outgoing.events_device.connector=smallrye-rabbitmq
-%prod.mp.messaging.outgoing.events_device.exchange.name=events_device
-%prod.mp.messaging.outgoing.events_device.exchange.declare=false
-%prod.mp.messaging.outgoing.events_device.exchange.type=fanout
-%prod.mp.messaging.outgoing.events_device.exchange.durable=false
-%prod.mp.messaging.outgoing.events_device.host=${MQ_HOST}
-%prod.mp.messaging.outgoing.events_device.port=${MQ_PORT}
-%prod.mp.messaging.outgoing.events_device.username=${MQ_USER}
-%prod.mp.messaging.outgoing.events_device.password=${MQ_PASSWORD}
-%prod.mp.messaging.outgoing.events_device.virtual-host=
-%prod.mp.messaging.outgoing.events_device.ssl=false
+# mp.messaging.outgoing.events_device.connector=smallrye-rabbitmq
+# %prod.mp.messaging.outgoing.events_device.exchange.name=events_device
+# %prod.mp.messaging.outgoing.events_device.exchange.declare=false
+# %prod.mp.messaging.outgoing.events_device.exchange.type=fanout
+# %prod.mp.messaging.outgoing.events_device.exchange.durable=false
+# %prod.mp.messaging.outgoing.events_device.host=${MQ_HOST}
+# %prod.mp.messaging.outgoing.events_device.port=${MQ_PORT}
+# %prod.mp.messaging.outgoing.events_device.username=${MQ_USER}
+# %prod.mp.messaging.outgoing.events_device.password=${MQ_PASSWORD}
+# %prod.mp.messaging.outgoing.events_device.virtual-host=
+# %prod.mp.messaging.outgoing.events_device.ssl=false
+
+### ADMIN_EMAIL
+# mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
+# %prod.mp.messaging.outgoing.admin_email.exchange.name=${MQ_ADMIN_EMAIL_EXCHANGE:admin_email}
+# %prod.mp.messaging.outgoing.admin_email.exchange.declare=false
+# %prod.mp.messaging.outgoing.admin_email.exchange.type=fanout
+# %prod.mp.messaging.outgoing.admin_email.exchange.durable=false
+# %prod.mp.messaging.outgoing.admin_email.host=${MQ_HOST}
+# %prod.mp.messaging.outgoing.admin_email.port=${MQ_PORT}
+# %prod.mp.messaging.outgoing.admin_email.username=${MQ_USER}
+# %prod.mp.messaging.outgoing.admin_email.password=${MQ_PASSWORD}
+# %prod.mp.messaging.outgoing.admin_email.virtual-host=
+# %prod.mp.messaging.outgoing.admin_email.ssl=false
 
 ### NOTIFICATIONS
-mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
-#mp.messaging.outgoing.notifications.exchange.declare=false
-%prod.mp.messaging.outgoing.notifications.default-routing-key=#
-%prod.mp.messaging.outgoing.notifications.host=${MQ_HOST}
-%prod.mp.messaging.outgoing.notifications.port=${MQ_PORT}
-%prod.mp.messaging.outgoing.notifications.username=${MQ_USER}
-%prod.mp.messaging.outgoing.notifications.password=${MQ_PASSWORD}
-%prod.mp.messaging.outgoing.notifications.virtual-host=
-%prod.mp.messaging.outgoing.notifications.ssl=false
+# mp.messaging.outgoing.notifications.connector=smallrye-rabbitmq
+# #mp.messaging.outgoing.notifications.exchange.declare=false
+# %prod.mp.messaging.outgoing.notifications.default-routing-key=#
+# %prod.mp.messaging.outgoing.notifications.host=${MQ_HOST}
+# %prod.mp.messaging.outgoing.notifications.port=${MQ_PORT}
+# %prod.mp.messaging.outgoing.notifications.username=${MQ_USER}
+# %prod.mp.messaging.outgoing.notifications.password=${MQ_PASSWORD}
+# %prod.mp.messaging.outgoing.notifications.virtual-host=
+# %prod.mp.messaging.outgoing.notifications.ssl=false
 
 ## MQTT
 #
@@ -109,6 +122,7 @@ mp.messaging.outgoing.commands.host=signomix-broker
 mp.messaging.outgoing.commands.port=1883
 mp.messaging.outgoing.commands.topic=signomix/events/commands
 mp.messaging.outgoing.commands.server-name=signomix-broker
+mp.messaging.outgoing.commands.merge=true
 
 mp.messaging.outgoing.devicecommands.connector=smallrye-mqtt
 mp.messaging.outgoing.devicecommands.host=signomix-broker
@@ -116,18 +130,11 @@ mp.messaging.outgoing.devicecommands.port=1883
 mp.messaging.outgoing.devicecommands.topic=signomix/events/device-commands
 mp.messaging.outgoing.devicecommands.server-name=signomix-broker
 
-### ADMIN_EMAIL
-mp.messaging.outgoing.admin_email.connector=smallrye-rabbitmq
-%prod.mp.messaging.outgoing.admin_email.exchange.name=${MQ_ADMIN_EMAIL_EXCHANGE:admin_email}
-%prod.mp.messaging.outgoing.admin_email.exchange.declare=false
-%prod.mp.messaging.outgoing.admin_email.exchange.type=fanout
-%prod.mp.messaging.outgoing.admin_email.exchange.durable=false
-%prod.mp.messaging.outgoing.admin_email.host=${MQ_HOST}
-%prod.mp.messaging.outgoing.admin_email.port=${MQ_PORT}
-%prod.mp.messaging.outgoing.admin_email.username=${MQ_USER}
-%prod.mp.messaging.outgoing.admin_email.password=${MQ_PASSWORD}
-%prod.mp.messaging.outgoing.admin_email.virtual-host=
-%prod.mp.messaging.outgoing.admin_email.ssl=false
+mp.messaging.outgoing.adminemail.connector=smallrye-mqtt
+mp.messaging.outgoing.adminemail.host=signomix-broker
+mp.messaging.outgoing.adminemail.port=1883
+mp.messaging.outgoing.adminemail.topic=signomix/mailing/admin-email
+mp.messaging.outgoing.adminemail.server-name=signomix-broker
 
 ## MONITORING
 signomix.monitoring.disk.free=${SIGNOMIX_DISK_FREE_MB:1000}
